syntax = "proto3";
package com.InventoryOrder;

option java_multiple_files = true;
option java_package = "com.InventoryOrder";

import "google/protobuf/empty.proto";
service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
  rpc GetAllOrders(google.protobuf.Empty) returns (OrderListResponse);
}

message OrderRequest {
  int64 InventoryId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  int64 orderId = 1;
  string status = 2;
  double totalPrice = 3;
}

message OrderListResponse {
  repeated OrderResponse orders = 1;
}